<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#2196F3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textSize="25sp"
            android:text="@string/input_form"
            android:textStyle="bold"
            android:textColor="#313131"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/et_namakam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/namakam"
            android:inputType="textCapSentences" />
        <EditText
            android:id="@+id/et_konkam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/konkam"
            android:inputType="textCapSentences"/>

        <EditText
            android:id="@+id/et_deskam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/deskam"
            android:inputType="textCapSentences"/>
        <Button
            android:id="@+id/btn_jual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Simpan"/>

    </LinearLayout>


</LinearLayout>