<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp"
    android:backgroundTint="#8BC34A"
    android:id="@+id/card_view"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginStart="10dp"
            android:background="#FFFFFF">

            <TextView
                android:padding="5dp"
                android:id="@+id/tv_namakam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/namakam"/>

            <TextView
                android:padding="5dp"
                android:id="@+id/tv_konkam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/konkam"/>

            <TextView
                android:padding="5dp"
                android:id="@+id/tv_deskam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deskam"/>

        </LinearLayout>

        <LinearLayout
            android:paddingTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="#FFFFFF">

            <ImageView
                android:id="@+id/hapus"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/ic_baseline_delete_24" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>